syntax = "proto3";
import "const.proto";
import "excelconst.proto";
package Proto;

message Vector3
{
	 float x=1;
	 float y=2;
	 float z=3;
}

message GameServerInfo
{
	 string host=2;//主机地址
	 int32 port=3;//主机端口
	 int32 server_id=4;//服务器ID
     int32 max_player_Count=5;//最大服务数
     int32 current_player_count = 6;//当前玩家数
}

message WearEquip
{
	 int32 ItemID=1;
	 string GUID=2;
	 EquipmentType Part=3; //部位
}

message HeroMagic
{
	 int32 MagicKey=1;
	 int32 Level =2;//level
}


//玩家角色
message DHero
{
	int32 HeroID=1;//配置ID
	int32 Level=2; //当前等级
	int32 Exprices=3;//当前经验
	repeated WearEquip Equips=4;//当前穿戴装备
	repeated HeroMagic Magics=5;//英雄当前激活魔法
}

//装备属性
message EquipProperty
{
	 HeroPropertyType Property=1;//属性类型
	 int32 Value=2;//属性值
}

//玩家道具
message PlayerItem
{
	  int32 ItemID=1;//配置ID
	  int32 Num=2;//拥有数量
	  string GUID=3;//唯一识别码
	  bool Locked=4; //是否锁定中
	  int32 Level =5;//等级 装备特有
}

//玩家背包
message PlayerPackage
{
	repeated PlayerItem Items=1;//道具列表
	int32 MaxSize=2;//背包上限
}

//用户服务器映射
message PlayerServerInfo
{
     string AccountUuid=1; //玩家ID
     int32 ServerID=2; //所在服务器	
     int32 ServicePort=3;
     string ServiceHost=4;
}

message HeroProperty
{
	 HeroPropertyType Property=1;//属性
	 int32 Value=2;//值
}

message MapMonsterGroup
{
	 MapNode Pos=1;
	 bool CanBeBoss=2;
}

message HeroMagicData 
{
	 float CDTime=1;
	 int32 MagicID=2;
}


